# ros_visualizer

./: CMakeLists.txt  README.md  package.xml  vis_point.rviz
include/detected_objects_visualizer/: visualize_detected_objects.hpp  visualize_rects.hpp
launch/: wind_visualizer.launch
log/: latest_list
src/: visualize_detected_objects.cpp  visualize_detected_objects_main.cpp  visualize_rects.cpp
